fix tests for Java 9